--- a/BookListRazor/appsettings.json
+++ b/BookListRazor/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings" :  {
+    "DefaultConnection" :  "server=localhost;user=root;password=everton;port=3306;database=BookList",
+  }
+
 }
