--- a/BookListRazor/appsettings.json
+++ b/BookListRazor/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings" :  {
-    "DefaultConnection" :  "server=localhost;user=root;password=everton;port=3306;database=BookList",
+    "DefaultConnection" :  "server=localhost;user=root;password=everton;port=3306;database=BookListRazor",
   }
 
 }
